@@ -2,6 +2,7 @@ package code;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.util.concurrent.TimeUnit;
 
 /**
  * Created by keecha4 on 6/2/2017.
@@ -11,20 +12,22 @@ public class CommandThread extends Thread {
     String _command;
     SuccessHandler _handler;
 
-    public synchronized void start(String command, SuccessHandler handler) {
-        super.start();
+    public CommandThread(String command, SuccessHandler handler){
         _handler = handler;
         _command = command;
-        System.out.println("MyThread "+command);
     }
 
     public void run(){
+        System.out.println(Thread.currentThread()+" MyThread "+_command);
         StringBuffer output = new StringBuffer();
 
-        Process p;
+        //Process p;
         try {
-            p = Runtime.getRuntime().exec(_command);
-            p.waitFor();
+            ProcessBuilder builder  = new ProcessBuilder("cmd.exe ","/c", _command);
+            builder.redirectErrorStream(true);
+            Process p = builder.start();
+            p.waitFor(2, TimeUnit.SECONDS);
+
             BufferedReader reader =
                     new BufferedReader(new InputStreamReader(p.getInputStream()));
 
@@ -32,7 +35,6 @@ public class CommandThread extends Thread {
             while ((line = reader.readLine())!= null) {
                 output.append(line + "\n");
             }
-
         } catch (Exception e) {
             e.printStackTrace();
         }
